# actix-server-side-program

./: Cargo.toml  DOCKERFILE  Dockerfile  database.db
migrations/2022-11-14-123314_create_tables/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/sites/: course.rs  enroll.rs  hi.rs  homepage.rs  instructor.rs  mod.rs  student.rs
templates/: based.html  courses.html  enroll.html  hi.html  homepage.html  instructors.html  students.html
