[package]
name = "actix-server-side-program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3.25", default-features = false, features = [
    "std",
] }
actix-form-data = "0.6.2"
actix-web = "4.2.1"
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
rusqlite = "0.28.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_derive = "1.0.147"
serde_json = "1.0.87"
diesel = { version = "2.0.2", features = ["sqlite"] }
askama = "0.11.1"